# audify

./: .gitignore  .keys.example  .readthedocs.yaml  BRANCH_GUIDE.md  CLAUDE.md  CONTEXT.md  COPY_PR_DESCRIPTION.txt  Dockerfile  Dockerfile.api  Dockerfile.kokoro  Dockerfile.qwen-tts  Dockerfile.stt  ENHANCEMENT_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  PIPELINE_INTEGRATION.md  PROCESSING_IMPROVEMENTS_README.md  PROCESSING_IMPROVEMENT_PLAN.md  PR_DESCRIPTION.md  README.md  STATUS.md  TEST_RESULTS.md  VERIFICATION_FEATURE.md  app.py  audify.db  audiobook-conversion-plans.md  batch_compare_results.json  cleaned_article.txt  cli.py  codecov.yml  create_podcast.py  debug_epub.py  demo_multifile.py  docker-compose.yml  flask_option_demo.py  main.py  metadata.txt  (+20 more)
.claude/: tracker.md
.github/: RELEASE_NOTES_TEMPLATE.md  pull_request_template.md
.github/workflows/: docs.yml  publish.yml  release.yml  tests.yml
audify/: __main__.py  audiobook_creator.py  cli.py  combine_covers.py  constants.py  convert.py  create_audiobook.py  create_podcast.py  database.py  ebook_read.py  enhanced_synthesizers.py  job_manager.py  job_processor.py  llm_clean.py  models.py  pdf_read.py  podcast_creator.py  start.py  synthesizer.py  text_to_speech.py  translate.py  utils.py  verification_integration.py  verify.py
audify/api/: app.py
audify/domain/: interface.py  reader.py
audify/prompts/: __init__.py  manager.py  tasks.py
audify/prompts/builtin/: audiobook.txt  lecture.txt  meditation.txt  podcast.txt  summary.txt
audify/qa/: graph.py  state.py  stt.py  wer.py
audify/qa/nodes/: assemble.py  confirm.py  fidelity.py  load_scripts.py  read.py  report.py  script_gen.py  script_validity.py  synthesize.py  text_quality.py
audify/readers/: ebook.py  pdf.py
audify/utils/: api_config.py  api_keys.py  async_utils.py  audio.py  combine_covers.py  constants.py  file_utils.py  logging_utils.py  m4b_builder.py  progress.py  prompts.py  text.py
data/: test.epub
docs/: COMMERCIAL_APIS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Manual prático do ódio.epub  Mathematics for Machine Learning.epub  Vila Sapo.epub  api-reference.md  architecture.md  changelog.md  cli-reference.md  commercial-apis.md  conf.py  configuration.md  contributing.md  graph.md  index.md  installation.md  quickstart.md  requirements.txt  rest-api.md  tasks.md  troubleshooting-no-audio.md  usage.md
docs/adr/: 0001-qa-loop-as-cyclic-graph-not-central-llm.md  0002-langgraph-as-cyclic-graph-substrate.md
examples/: commercial_api_demo.py
scripts/: analyze_audiobooks.py  batch_compare_audiobooks.py  batch_direct.py  batch_remaining.sh  check_tts_health.py  clean_reprocess_verify.py  compare_versions.py  leave_one_out_analysis.py  phase1_robust.py  process_one_book.py  qwen_tts_api.py  run_all.sh  run_phase2_all.sh  stt_api.py  synthesize_with_ffmpeg.py  validate_epub_extraction.py  verify_all.py
scripts/debug/: debug_epub.py  debug_invalid_chapters.py  debug_raw_content.py  debug_toc_analysis.py  debug_validity.py  inspect_chapter.py
static/: index.html  main_template.html
tests/: conftest.py  test_api_coverage.py  test_api_keys.py  test_api_routes.py  test_async_api.py  test_audiobook_creator.py  test_audiobook_creator_error_paths.py  test_cli_runtime_paths.py  test_combine_coverage.py  test_commercial_api_config.py  test_coverage_helper.py  test_coverage_improvements.py  test_create_audiobook.py  test_create_audiobook_directory.py  test_create_podcast.py  test_directory_audiobook_creator.py  test_ebook_read.py  test_langchain_translation.py  test_llm_client_commercial.py  test_m4b_splitting.py  test_pipeline_improvements.py  test_podcast_creator.py  test_prompt_system.py  test_qa_graph.py  test_qa_wer.py  test_qwen_e2e.py  test_qwen_tts_api_integration.py  test_start.py  test_start.py.bak  test_start_new_features.py  test_stt_api.py  test_stt_client.py  test_synthesizer.py  test_test_to_speach.py  test_text_to_speech.py  test_text_to_speech_coverage.py  test_text_to_speech_coverage_2.py  test_translate.py  test_utils.py  test_verification_integration.py  (+3 more)
tests/debug/: debug_epub.py  debug_invalid_chapters.py  debug_raw_content.py  debug_toc.py  debug_toc_analysis.py  debug_validity.py  debug_validity_detailed.py
tests/fixtures/: book_fixtures.py  readers.py  synthesizers.py
tests/integration/: test_stt_roundtrip.py  test_voice_samples_integration.py
tests/readers/: test_ebook.py  test_pdf.py
tests/utils/: test_api_config.py  test_audio.py  test_combine_covers.py  test_file_utils.py  test_logging_utils.py  test_progress.py  test_qwen_tts_config.py  test_text.py  test_tts_api_config.py
