[project]
name = "audify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.1.8",
    "ebooklib>=0.18",
    "kokoro>=0.9.4",
    "markdown>=3.7",
    "misaki[zh]>=0.8.4",
    "ollama>=0.4.7",
    "pip>=25.0.1",
    "pydub>=0.25.1",
    "pypdf>=5.6.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.2",
    "sentencepiece>=0.2.0",
    "transformers[torch]>=4.48.1",
    "tts[ja]>=0.22.0",
    "streamlit>=1.33.0",
    "soundfile>=0.13.1",
    "torchvision[nightly]>=0.23.0",
]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=44.1.0", "wheel>=0.34.2"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "taskipy>=1.13.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "ipykernel>=6.29.5",
]
gpu = ["black>=25.1.0"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "def test_", "ABC"]
omit = ["*.venv/*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = []
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]


[tool.ruff]
exclude = [
    "*/migrations/*",
    "*/settings.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/mlflwo/*",
    "*/__pycache__/*",
    "data/*",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']
exclude = ['.venv']


[tool.mypy]
ignore_missing_imports = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.taskipy.tasks]
test = "uv run pytest --cov=audify --cov-report=term-missing"
format = "ruff check . --fix"
pre_test = "task format && mypy ."
post_test = "uv run coverage html"
run = "uv run python -m audify.start"
up = "docker compose up"
drun = "docker compose run --rm audify"
